# rust_gui_panic_handler

./: Cargo.toml  README.md  flake.nix  result
examples/: example.rs
src/: error_reporting.rs  lib.rs  main.rs
