[package]
name = "gui_panic_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1" }
urlencoding = { version = "2.1.3", optional = true }

[features]
default = ["error-reporting"]
error-reporting = ["dep:urlencoding"]

[[example]]
name = "example"
required-features = ["default"]
